Create contract merged into modal

--- a/app/contracts/templates/contractmodal.directive.html
+++ b/app/contracts/templates/contractmodal.directive.html
@@ -1,23 +1,23 @@
-<div class="modal fade" id="viewdetail" tabindex="-1" role="dialog" aria-labelledby="viewdetailLabel" aria-hidden="false">
+<div class="modal fade" id="contractModal" tabindex="-1" role="dialog" aria-labelledby="contractModalLabel" aria-hidden="false">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
-        <h4 class="modal-title" id="myModalLabel">{{conts.viewContract.name}}</h4>
+        <h4 class="modal-title" id="myModalLabel"><input class="form-control" ng-model="conts.thisContract.name" /></h4>
       </div>
       <div class="modal-body">
       	<table class="table">
-      		<tr><td>Location</td><td><input class="form-control" ng-model="conts.viewContract.location" /></td></tr>
-      		<tr><td>Day rate</td><td><input class="form-control" ng-model="conts.viewContract.dayrate" /></td></tr>
-      		<tr><td>Duration</td><td><input class="form-control" ng-model="conts.viewContract.duration" /></td></tr>
-          <tr><td>Permalink</td><td><input class="form-control" ng-model="conts.viewContract.url" /></td></tr>
-          <tr><td>Recruiter</td><td><input class="form-control" ng-model="conts.viewContract.recruiter" /></td></tr>
-          <tr><td>Recruiter Tel</td><td><input class="form-control" ng-model="conts.viewContract.recruitertel" /></td></tr>
+      		<tr><td>Location</td><td><input class="form-control" ng-model="conts.thisContract.location" /></td></tr>
+      		<tr><td>Day rate</td><td><input class="form-control" ng-model="conts.thisContract.dayrate" /></td></tr>
+      		<tr><td>Duration</td><td><input class="form-control" ng-model="conts.thisContract.duration" /></td></tr>
+          <tr><td>Permalink</td><td><input class="form-control" ng-model="conts.thisContract.url" /></td></tr>
+          <tr><td>Recruiter</td><td><input class="form-control" ng-model="conts.thisContract.recruiter" /></td></tr>
+          <tr><td>Recruiter Tel</td><td><input class="form-control" ng-model="conts.thisContract.recruitertel" /></td></tr>
           <tr><td>Application date</td><td>
             <div class="input-group date datetimepicker">
-              <input class="form-control" ng-model="conts.viewContract.appdate" />
+              <input class="form-control" ng-model="conts.thisContract.appdate" />
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
               </span>
@@ -27,8 +27,9 @@
         </table>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" ng-click=conts.updateContract()>Save changes</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-show=conts.thisContract.$id ng-click=conts.updateContract()>Save changes</button>
+        <button type="button" class="btn btn-primary" data-dismiss="modal" ng-hide=conts.thisContract.$id ng-click=conts.createContract()>Create</button>
       </div>
     </div>
   </div>
