--- a/app/contracts/templates/contractmodal.directive.html
+++ b/app/contracts/templates/contractmodal.directive.html
@@ -1,4 +1,7 @@
 <div class="modal fade" id="contractModal" tabindex="-1" role="dialog" aria-labelledby="contractModalLabel" aria-hidden="false">
+
+
+
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -7,25 +10,77 @@
         </button>
         <h4 class="modal-title" id="myModalLabel"><input class="form-control" ng-model="conts.thisContract.name" /></h4>
       </div>
+
+
       <div class="modal-body">
-      	<table class="table">
-      		<tr><td>Location</td><td><input class="form-control" ng-model="conts.thisContract.location" /></td></tr>
-      		<tr><td>Day rate</td><td><input class="form-control" ng-model="conts.thisContract.dayrate" /></td></tr>
-      		<tr><td>Duration</td><td><input class="form-control" ng-model="conts.thisContract.duration" /></td></tr>
-          <tr><td>Permalink</td><td><input class="form-control" ng-model="conts.thisContract.url" /></td></tr>
-          <tr><td>Recruiter</td><td><input class="form-control" ng-model="conts.thisContract.recruiter" /></td></tr>
-          <tr><td>Recruiter Tel</td><td><input class="form-control" ng-model="conts.thisContract.recruitertel" /></td></tr>
-          <tr><td>Application date</td><td>
+
+        <ul class="nav nav-tabs" id="tabContent">
+            <li class="active"><a href="#metrics" data-toggle="tab">Metrics</a></li>
+            <li><a href="#recruiter" data-toggle="tab">Recruiter</a></li>
+            <li><a href="#client" data-toggle="tab">Client</a></li>
+        </ul>
+
+        <div class="tab-content">
+
+          <div class="tab-pane active" id="metrics">
+
+            <div class="input-group">
+              <input class="form-control" placeholder="Location" ng-model="conts.thisContract.metrics.location" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="Day rate" ng-model="conts.thisContract.metrics.dayrate" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="Contract length" ng-model="conts.thisContract.metrics.duration" />
+            </div>            
+            <div class="input-group">
+              <input class="form-control" placeholder="Specification" ng-model="conts.thisContract.metrics.spec" />
+            </div>
             <div class="input-group date datetimepicker">
-              <input class="form-control" ng-model="conts.thisContract.appdate" />
+              <input class="form-control" placeholder="Application date" ng-model="conts.thisContract.metrics.appdate" />
               <span class="input-group-addon">
                 <span class="glyphicon glyphicon-calendar"></span>
               </span>
             </div>
-          </td></tr>
 
-        </table>
+          </div>
+
+
+          <div class="tab-pane" id="recruiter">
+
+            <div class="input-group">
+              <input class="form-control" placeholder="Name" ng-model="conts.thisContract.recruiter.name" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="Company" ng-model="conts.thisContract.recruiter.company" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="Website" ng-model="conts.thisContract.recruiter.url" />
+            </div>            
+            <div class="input-group">
+              <input class="form-control" placeholder="Tel" ng-model="conts.thisContract.recruiter.tel" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="Email" ng-model="conts.thisContract.recruiter.email" />
+            </div>
+
+          </div>
+
+
+          <div class="tab-pane" id="client">
+
+            <div class="input-group">
+              <input class="form-control" placeholder="name" ng-model="conts.thisContract.client.name" />
+            </div>
+            <div class="input-group">
+              <input class="form-control" placeholder="website" ng-model="conts.thisContract.client.url" />
+            </div>
+
+          </div>
+
       </div>
+
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         <button type="button" class="btn btn-primary" data-dismiss="modal" ng-show=conts.thisContract.$id ng-click=conts.updateContract()>Save changes</button>
